@@ -1,3 +1,4 @@
+* Store target of field as relation
 * Remove support for Python 3.8
 * Add support for Python 3.13
 * Add on_write to ModelStorage
